# ROS2-HAL-AdvancedNavigation-Spatial-GNSS

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
advancednavigation_gnss/: geotranslator.py  gns.py  gnss.py
advancednavigation_gnss/advancednavigation_spatial/: Makefile  advancednavigation_spatial.cpp  ntrip.py  test.py
advancednavigation_gnss/advancednavigation_spatial/spatialsdk/: spatial_packets.c
advancednavigation_gnss/advancednavigation_spatial/spatialsdk/rs232/: rs232.c  rs232.h
advancednavigation_gnss/geo_to_cart_cxx/: Makefile  geo_to_cart_cxx.cpp
advancednavigation_gnss/geo_to_cart_cxx/modules/: GeotedicToLocalCartesian.hpp
launch/: hal_an_spatial.launch.py
params/: params.yaml
src/: advancednavigation_spatial.cpp  an_packet_protocol.c
