<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hal_an_spatial</name>
  <version>0.0.0</version>
  <description>HAL for GNSS AdvancedNavigation Spatial</description>
  <maintainer email="roncapat@gmail.com">Patrick Roncagliolo</maintainer>
  <license>BSD</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>serial</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
